--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "start-dev": "node ./webpack.dev.server.js"
+    "start-dev": "node ./server.js",
+    "dev": "node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -26,16 +26,24 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.22.2",
     "babel-loader": "^6.2.10",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "expect": "^1.20.2",
     "json-loader": "^0.5.4",
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-livereload-plugin": "^0.10.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "v3.0.0-beta.6",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-livereload-plugin": "^0.10.0"
+    "redux": "^3.6.0"
   }
 }
