--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.22.2",
     "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
@@ -39,11 +40,16 @@
     "webpack-livereload-plugin": "^0.10.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.17.0",
     "react": "^15.4.2",
+    "react-autobind": "^1.0.6",
     "react-dom": "^15.4.2",
     "react-hot-loader": "v3.0.0-beta.6",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.2"
   }
 }
