--- a/package.json
+++ b/package.json
@@ -46,13 +46,16 @@
     "css-loader": "^0.27.1",
     "electron-prebuilt": "^1.4.13",
     "extract-text-webpack-plugin": "^2.1.0",
+    "keyboard-shortcut": "^1.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
+    "rc-slider": "^6.1.2",
     "react": "^15.4.2",
     "react-autobind": "^1.0.6",
     "react-dom": "^15.4.2",
     "react-hot-loader": "v3.0.0-beta.6",
     "react-redux": "^5.0.3",
+    "react-slider": "^0.7.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
     "style-loader": "^0.13.2"
